--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "Unity.TextMeshPro",
         "BattlePhazeSettingsManger",
-        "Basis"
+        "Basis",
+        "BasisAddressableDriver",
+        "Unity.Addressables"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
