--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/GameRoutine/Scripts/Runtime/Hai.Project12.GameRoutine.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/GameRoutine/Scripts/Runtime/Hai.Project12.GameRoutine.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Hai.Project12.UserInterfaceElements.Runtime",
+    "name": "Hai.Project12.GameRoutine.Runtime",
     "rootNamespace": "",
     "references": [
         "Unity.TextMeshPro",
@@ -7,8 +7,8 @@
         "Basis",
         "BasisAddressableDriver",
         "Unity.Addressables",
-        "Hai.Project12.GameRoutine.Runtime",
-        "BasisSDK"
+        "BasisSDK",
+        "BasisDebug"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
