--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
@@ -8,7 +8,8 @@
         "BasisAddressableDriver",
         "Unity.Addressables",
         "Hai.Project12.GameRoutine.Runtime",
-        "BasisSDK"
+        "BasisSDK",
+        "BasisDebug"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
