--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
@@ -9,7 +9,9 @@
         "Unity.Addressables",
         "Hai.Project12.GameRoutine.Runtime",
         "BasisSDK",
-        "BasisDebug"
+        "BasisDebug",
+        "Unity.InputSystem",
+        "SettingsManagerModules"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
