--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/HaiSystems/Scripts/Supporting/Hai.Project12.UserInterfaceElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/HaiSystems/Scripts/Supporting/Hai.Project12.UserInterfaceElements.Runtime.asmdef
@@ -1,15 +1,7 @@
 {
-    "name": "Hai.Project12.GameRoutine.Runtime",
+    "name": "Hai.Project12.HaiSystems.Supporting",
     "rootNamespace": "",
     "references": [
-        "Unity.TextMeshPro",
-        "BattlePhazeSettingsManger",
-        "Basis",
-        "BasisAddressableDriver",
-        "Unity.Addressables",
-        "BasisSDK",
-        "BasisDebug",
-        "Hai.Project12.HaiSystems.Supporting"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
