--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/InteractionElements/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/InteractionElements/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
@@ -6,7 +6,8 @@
         "BattlePhazeSettingsManger",
         "Basis",
         "BasisAddressableDriver",
-        "Unity.Addressables"
+        "Unity.Addressables",
+        "Hai.Project12.HaiSystems.Supporting"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
