--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/ListenServerAdapter/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/ListenServerAdapter/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
@@ -8,7 +8,8 @@
         "BasisDebug",
         "BasisNetworkClient",
         "LiteNetLib",
-        "BasisNetworkCore"
+        "BasisNetworkCore",
+        "Hai.Project12.HaiSystems.Supporting"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
