--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/UserInterfaceElements/Scripts/Runtime/Hai.Project12.UserInterfaceElements.Runtime.asmdef
@@ -11,7 +11,8 @@
         "BasisSDK",
         "BasisDebug",
         "Unity.InputSystem",
-        "SettingsManagerModules"
+        "SettingsManagerModules",
+        "Hai.Project12.InteractionElements.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
