--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/InteractionElements/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/InteractionElements/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Hai.Project12.InteractionElements.Runtime",
-    "rootNamespace": "",
+    "rootNamespace": "Hai.Project12.InteractionElements.Runtime",
     "references": [
         "Unity.TextMeshPro",
         "BattlePhazeSettingsManger",
