Add field access, property access, Color, and Vector3 handling.

--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/Vixxy/Scripts/Runtime/Hai.Project12.Vixxy.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/Vixxy/Scripts/Runtime/Hai.Project12.Vixxy.Runtime.asmdef
@@ -10,7 +10,8 @@
         "BasisDebug",
         "Hai.Project12.HaiSystems.Supporting",
         "Hai.Project12.InteractionElements.Runtime",
-        "HVR.Basis.Comms"
+        "HVR.Basis.Comms",
+        "Unity.RenderPipelines.Universal.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
