Disable Steamworks class, which was preventing avatar builds.

--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/ListenServerAdapter/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/ListenServerAdapter/Scripts/Runtime/Hai.Project12.InteractionElements.Runtime.asmdef
@@ -20,6 +20,12 @@
     ],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name" : "Facepunch.Steamworks.Win64",
+            "expression": "",
+            "define": "FACEPUNCH_STEAMWORKS_AVAILABLE"
+        }
+    ],
     "noEngineReferences": false
 }
