Add current work on physics animation.

--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/RigidbodyAdditions/Scripts/Runtime/Hai.Project12.RigidbodyAdditions.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/RigidbodyAdditions/Scripts/Runtime/Hai.Project12.RigidbodyAdditions.Runtime.asmdef
@@ -5,7 +5,9 @@
         "BattlePhazeSettingsManger",
         "Basis",
         "BasisAddressableDriver",
-        "Unity.Addressables"
+        "Unity.Addressables",
+        "Hai.Project12.DataViz.Runtime",
+        "Hai.Project12.HaiSystems.Supporting"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
