Allow creating the physics rig separately from the visual representation of the avatar.

--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/RigidbodyAdditions/Scripts/Runtime/Hai.Project12.RigidbodyAdditions.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/RigidbodyAdditions/Scripts/Runtime/Hai.Project12.RigidbodyAdditions.Runtime.asmdef
@@ -7,7 +7,8 @@
         "BasisAddressableDriver",
         "Unity.Addressables",
         "Hai.Project12.DataViz.Runtime",
-        "Hai.Project12.HaiSystems.Supporting"
+        "Hai.Project12.HaiSystems.Supporting",
+        "Hai.Project12.Remesher.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
