Add pose merger, and start moving towards a shared rig data structure.

--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/Remesher/Scripts/Runtime/Hai.Project12.Remesher.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/Remesher/Scripts/Runtime/Hai.Project12.Remesher.Runtime.asmdef
@@ -6,7 +6,8 @@
         "BasisAddressableDriver",
         "Unity.Addressables",
         "BasisDebug",
-        "Hai.Project12.HaiSystems.Supporting"
+        "Hai.Project12.HaiSystems.Supporting",
+        "Hai.Project12.HaiSystems.DataStructures"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
