--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/RigidbodyAdditions/Scripts/Runtime/Hai.Project12.RigidbodyAdditions.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/RigidbodyAdditions/Scripts/Runtime/Hai.Project12.RigidbodyAdditions.Runtime.asmdef
@@ -8,6 +8,7 @@
         "Unity.Addressables",
         "Hai.Project12.DataViz.Runtime",
         "Hai.Project12.HaiSystems.Supporting",
+        "Hai.Project12.HaiSystems.DataStructures",
         "Hai.Project12.Remesher.Runtime"
     ],
     "includePlatforms": [],
