Add rig driver, fix recursion error.

--- a/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/SupplementalKinematics/Scripts/Runtime/Hai.Project12.SupplementalKinematics.Runtime.asmdef
+++ b/Packages/dev.hai-vr.8f3b9a2cde14/Subsets/SupplementalKinematics/Scripts/Runtime/Hai.Project12.SupplementalKinematics.Runtime.asmdef
@@ -8,7 +8,8 @@
         "Unity.Addressables",
         "Hai.Project12.DataViz.Runtime",
         "Hai.Project12.HaiSystems.Supporting",
-        "Hai.Project12.HaiSystems.DataStructures"
+        "Hai.Project12.HaiSystems.DataStructures",
+        "Hai.Project12.RigidbodyAdditions.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
